<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_pizza"
        android:layout_width="311dp"
        android:layout_height="244dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxDelivery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pizza" />

    <CheckBox
        android:id="@+id/checkBoxDelivery"
        android:layout_width="97dp"
        android:layout_height="38dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="17dp"
        android:text="Delivery"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addToppingB"
        android:layout_width="168dp"
        android:layout_height="58dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="11dp"
        android:text="@string/add_toppings"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/checkoutButton"
        app:layout_constraintEnd_toStartOf="@+id/clearButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="168dp"
        android:layout_height="58dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="11dp"
        android:text="@string/clear"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/checkoutButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/checkoutButton"
        android:layout_width="363dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/checkout"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/addToppingB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.flexbox.FlexboxLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/flexLayout"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        app:alignContent="stretch"
        app:alignItems="stretch"
        app:flexWrap="wrap"
        app:justifyContent="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.flexbox.FlexboxLayout>

</androidx.constraintlayout.widget.ConstraintLayout>